[package]
name = "qqwing"
edition = "2021"
version = "1.3.5"
description = "QQwing is software for generating and solving Sudoku puzzles. This is a rust version."
authors = [
  "Adun Gaos <adungaos@gmail.com>",
]
repository = "https://github.com/adungaos/qqwing"
keywords = ["qqwing", "Sudoku"]
categories = ["algorithms", "game", "puzzle"]
license = "MIT"
readme = "./README.md"

[profile.dev]
opt-level = 1

[dependencies]
thiserror = "1"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
strum = { version = "0.26", features = ["derive"] }